infra/kustomize/overlays/local/cluster-access/internal-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: internal
  labels:
    app.kubernetes.io/part-of: threshold
    app.kubernetes.io/managed-by: argocd
